--- a/styles/main.css
+++ b/styles/main.css
@@ -68,25 +68,38 @@ a, button {
   background: radial-gradient(#FFFFFF, rgba(255,255,255,0));
 }
 
-
-.delay-1ms {
-  @apply delay-[10ms]
+@-webkit-keyframes rotating /* Safari and Chrome */ {
+  from {
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
-.delay-2ms {
-  @apply delay-[20ms]
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
-.delay-3ms {
-  @apply delay-[30ms]
-}
-.delay-4ms {
-  @apply delay-[40ms]
-}
-.delay-5ms {
-  @apply delay-[50ms]
-}
-.delay-6ms {
-  @apply delay-[60ms]
-}
-.delay-7ms {
-  @apply delay-[70ms]
+.rotating {
+  -webkit-animation: rotating 5s linear infinite;
+  -moz-animation: rotating 5s linear infinite;
+  -ms-animation: rotating 5s linear infinite;
+  -o-animation: rotating 5s linear infinite;
+  animation: rotating 5s linear infinite;
 }
