further FE scaffolding

--- a/styles/main.css
+++ b/styles/main.css
@@ -124,3 +124,14 @@ a, button {
           hyphens: none;
  }
 }
+
+.embla__container {
+  display: flex;
+}
+.embla__slide {
+  flex: 0 0 85%;
+
+  @screen lg {
+    flex: 0 0 75%;
+  }
+}
