further FE scaffolding

--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -1,7 +1,7 @@
 /* Content Stylings */
 .content {
   & > p {
-    @apply mb-5 md:mb-8 last-of-type:mb-0 leading-snug md:leading-snug;
+    @apply mb-5 md:mb-8 last-of-type:mb-0 leading-snug md:leading-snug lg:leading-snug text-lg md:text-xl lg:text-2xl;
   }
 
   & > p > a {
@@ -9,10 +9,10 @@
   }
 
   & > ul {
-    @apply mt-6 md:mt-8 xl:mt-12 leading-snug md:leading-snug;
+    @apply mb-8 md:mb-12 mt-6 md:mt-8 xl:mt-12 leading-snug md:leading-snug lg:leading-snug text-lg md:text-xl lg:text-2xl;
 
     & li {
-      @apply block pl-5 md:pl-6 relative;
+      @apply block pl-5 md:pl-6 relative mb-3;
 
       &:before {
         content: ' ';
@@ -22,11 +22,21 @@
   }
 
   & > h1, & > .h1 {
-    @apply text-3xl md:text-4xl;
+    @apply text-[8vw] md:text-[5vw] lg:text-[4vw] xl:text-[3vw] leading-none md:leading-none lg:leading-none xl:leading-none mb-12 font-normal;
   }
 
   & > h2, & > .h2 {
-    @apply text-2xl md:text-3xl;
+    @apply text-3xl md:text-4xl lg:text-5xl leading-none md:leading-none lg:leading-none xl:leading-none mb-8 mt-16 md:mb-10 md:mt-24 font-normal;
+  }
+
+  & > h3, & > .h3 {
+    @apply text-2xl md:text-3xl lg:text-4xl leading-none md:leading-none lg:leading-none xl:leading-none mb-8 mt-16 md:mb-10 md:mt-24 font-normal;
+  }
+
+  & > h1, & > h2, & > h3 {
+    & strong {
+      @apply font-normal !important;
+    }
   }
 }
 
