--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -40,6 +40,12 @@
   }
 }
 
+.content--small {
+  & > p {
+    @apply text-base md:text-lg lg:text-xl mb-3 md:mb-3;
+  }
+}
+
 /* Heading Defaults */
 h1, .h1, h2, .h2, h3, .h3 {
   @apply p-0 mb-6;
