--- a/styles/main.css
+++ b/styles/main.css
@@ -79,42 +79,6 @@ a, button {
   background: radial-gradient(#FFFFFF, rgba(255,255,255,0));
 }
 
-@-webkit-keyframes rotating /* Safari and Chrome */ {
-  from {
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes rotating {
-  from {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-.rotating {
-  -webkit-animation: rotating 5s linear infinite;
-  -moz-animation: rotating 5s linear infinite;
-  -ms-animation: rotating 5s linear infinite;
-  -o-animation: rotating 5s linear infinite;
-  animation: rotating 5s linear infinite;
-}
-
 .break-hyphens {
   word-wrap: break-word;
   overflow-wrap: break-word;
@@ -189,7 +153,18 @@ a, button {
 }
 
 .react-select__control {
-  @apply bg-black rounded-full text-white pl-5 pr-3 py-2 border-none outline-none focus:border-none focus:outline-none focus-visible:border-0 focus-visible:outline-none focus-visible:outline-dashed focus-visible:outline-2 focus-visible:outline-black !important;
+  @apply border-0 bg-black rounded-full text-white pl-5 pr-3 py-3 cursor-pointer hover:bg-yellow !important;
+  box-shadow: none !important;
+}
+
+.react-select__control--is-focused {
+  @apply border-0 outline-none bg-yellow !important;
+  box-shadow: none !important;
+}
+
+.react-select__control--menu-is-open {
+  @apply border-0 outline-none bg-yellow !important;
+  box-shadow: none !important; 
 }
 
 .react-select__single-value, .react-select__input-container, .react-select__value-container, .react-select__placeholder {
@@ -197,7 +172,7 @@ a, button {
 }
 
 .react-select__indicator {
-  @apply opacity-100 hover:opacity-100 focus:opacity-100 text-white ml-0 pl-0 !important;
+  @apply opacity-100 hover:opacity-100 focus:opacity-100 text-white ml-0 pl-2 md:pl-5 !important;
 }
 
 .react-select__indicator-separator {
@@ -205,7 +180,7 @@ a, button {
 }
 
 .react-select__menu {
-  @apply bg-white border-black border rounded-3xl py-0 overflow-hidden mt-7 min-w-[220px] !important;
+  @apply bg-white border-black border rounded-3xl py-0 overflow-hidden mt-2 md:mt-7 min-w-full md:min-w-[300px] !important;
 }
 
 .react-select__menu-list {
@@ -213,7 +188,7 @@ a, button {
 }
 
 .react-select__option {
-  @apply border-b border-black bg-white py-4 px-5 !important;
+  @apply border-b border-black bg-white py-4 px-5 cursor-pointer !important;
 
   &:last-child {
     @apply border-b-0 !important;
