--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -9,7 +9,7 @@
   }
 
   & > ul {
-    @apply mb-8 md:mb-12 mt-6 md:mt-8 xl:mt-12 leading-snug md:leading-snug lg:leading-snug text-lg md:text-xl lg:text-2xl;
+    @apply mb-8 md:mb-12 leading-snug md:leading-snug lg:leading-snug text-lg md:text-xl lg:text-2xl;
 
     & li {
       @apply block pl-5 md:pl-6 relative mb-3;
@@ -19,6 +19,10 @@
         @apply w-2 h-2 rounded-full bg-current absolute top-[8px] md:top-[10px] xl:top-[13px] left-0;
       }
     }
+  }
+
+  & > * + ul {
+    @apply mt-6 md:mt-8 xl:mt-12;
   }
 
   & > h1, & > .h1 {
