modular video blocks

--- a/styles/main.css
+++ b/styles/main.css
@@ -282,3 +282,9 @@ scrollbar-width: none;
     clear: both;
   }
 }
+
+iframe {
+  width: 100% !important;
+  height: auto !important;
+  @apply aspect-video;
+}
